--- a/templates/survey.html
+++ b/templates/survey.html
@@ -5,8 +5,7 @@
 {% endblock %}
 {% block tabs %}{{super()}}{% endblock %}
 {% block body %}
-<div class="survey">
+<div id="survey">
 </div>
 <script src="/static/js/survey.js"></script>
-    <div class="content">
 {% endblock %}
