--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,4 +13,12 @@
     </div>
   </center>
 </div>
+  <div id="input">
+    <form action="" method="POST">
+      <input type="text" name="Username" class="" placeholder="Choose a username"></input>
+      <input type="password" name="Password" class="" placeholder="Choose a password" ></input>
+      <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
+      <br><br>
+    </form>
+  </div>
 {% endblock %}
