--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Log In{% endblock %}
+{% block title %}Matching with Vikings{% endblock %}
 {% block head %}
 {{ super() }}
 {% endblock %}
@@ -7,7 +7,8 @@
 {% block body %}
 <div class="content">
   <br>
-  <center><h2>Enter your username and password</h2></center><br>
+  <center>    <h3>Matching with Vikings</h3>
+<h3>Enter your username and password</h2></center><br>
   <div id="input">
     <form action="" method="POST">
       <input type="text" name="Username" class="" placeholder="Type your username"></input>
