--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,13 @@
       <li class="tab1"><button name="tabcreate">Create Survey</button></li>
       </form>
        <form action="" method="POST">
+      <li class="tab1"><button name="tabprofile">Profile</button></li>
+      </form>
+       <form action="" method="POST">
       <li class="tab1"><button name="tabsurvey">Take Survey</button></li>
+      </form>
+       <form action="" method="POST">
+      <li class="tab1"><button name="tabresults">Results</button></li>
       </form>
     </ul>
   </div>
