added radio buttons

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -12,7 +12,9 @@
 {% endfor %}
 </select>
 </form>
+<form action="" method="POST">
 <div id="survey">
 </div>
+</form>
 <script src="/static/js/survey.js"></script>
 {% endblock %}
