--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@ font-size:15;
 }
 
 html {
-                  background-image:url('../background.png');
+                  background-image:url('../Green-Line-Pattern.jpg');
 }
 
 body {
@@ -48,7 +48,7 @@ border-left:1px solid black;
 border-bottom:0px;
 border-top-right-radius:4px;
 border-top-left-radius:4px;
-background-image:url('../background.png');
+background-image:url('../Green-Line-Pattern.jpg');
 color:black; /* set unselected tab color as desired */
 margin-right: 0px; /* set additional spacing between tabs as desired */
 border-bottom: none;
