--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,6 @@
 * {margin:0;
                    padding:0;
-                   font-family: Tahoma;
+                   font-family: Tahoma, Helvetica, sans-serif;
 font-size:15;
 }
 
