--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@ font-size:15;
 }
 
 html {
-                  background-image:url("../main-background.jpeg");
+                  background-image:url("../main-background.png");
 }
 
 body {
