edited font colors

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,28 +11,36 @@
   <div id="tabs">
     <ul id="tabnav">
       <form action="" method="POST">
-      <li class="tab1"><button name="tabhome">Home</button></li>
+      <li class="tab1"><button name="tabhome"><font color = "white">
+Home</button></li>
       </form>
       <form action="" method="POST">
-      <li class="tab1"><button name="tablogin">Log In</button></li>
+      <li class="tab1"><button name="tablogin"><font color = "white">
+Log In</button></li>
       </form>
       <form action="" method="POST">
-      <li class="tab1"><button name="tabsignup">Sign Up</button></li>
+      <li class="tab1"><button name="tabsignup"><font color = "white">
+Sign Up</button></li>
       </form>
        <form action="" method="POST">
-      <li class="tab1"><button name="tabcreate">Create Survey</button></li>
+      <li class="tab1"><button name="tabcreate"><font color = "white">
+Create Survey</button></li>
       </form>
        <form action="" method="POST">
-      <li class="tab1"><button name="tabprofile">Profile</button></li>
+      <li class="tab1"><button name="tabprofile"><font color = "white">
+Profile</button></li>
       </form>
        <form action="" method="POST">
-      <li class="tab1"><button name="tabsurvey">Take Survey</button></li>
+      <li class="tab1"><button name="tabsurvey"><font color = "white">
+Take Survey</button></li>
       </form>
        <form action="" method="POST">
-      <li class="tab1"><button name="tabresults">Results</button></li>
+      <li class="tab1"><button name="tabresults"><font color = "white">
+Results</button></li>
       </form>
     </ul>
   </div>
+</font>
 {% endblock %}
 <body>
 {% block body %}
