change font colors!

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,8 @@
 {% block tabs %}{{super()}}{% endblock %}
 {% block body %}
 <div class="content">
+   <font color="#013F5C">
+
   <br>
   <center>    <h3>Matching with Vikings</h3>
 <h3>Enter your username and password</h2></center><br>
