--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,7 @@
 {% block tabs %}{{super()}}{% endblock %}
 {% block body %}
 <div class="content">
+   <font color="#013F5C">
   <center>
     <h2>Matching with Vikings</h2>
     <div class="text">
