--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 {% block body %}
   <style type="text/css">@import "{{url_for("static", filename="css/main.css")}}";</style>
 <div class="content">
+  <font color="#013F5C">
   <center>
     <h3>Matching with Vikings</h3>
     <div class="text">
