--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,8 @@
 {% block tabs %}{{super()}}{% endblock %}
 {% block body %}
 <div class="content">
+  <font color="#013F5C">
+
   <center>
     <h3>Matching with Vikings</h3>
     <div class="text">
