changed some layout on the login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,12 +10,14 @@
 
   <br>
   <center>    <h3>Matching with Vikings</h3>
-<h3>Enter your username and password</h2></center><br>
-  <div id="input">
+<h3>Please enter your username and password below:</h2></center><br>
+  <div id="input" align = "center">
     <form action="" method="POST">
-      <input type="text" name="Username" class="" placeholder="Type your username"></input>
-      <input type="password" name="Password" class="" placeholder="Type your password" ></input>
-      <input class="button" type="submit" name="submitlogin" value="Login" class=""></input>
+      Username: <input type="text" name="Username" class="" placeholder="Type your username"></input>
+<br>
+      Password: <input type="password" name="Password" class="" placeholder="Type your password" ></input>
+<br><br>
+      <input class="button" type="submit" name="submitlogin" value="      Login      " class=""></input>
       <br><br>
     </form>
   </div>
