fixed the font color on the survey page

--- a/templates/create.html
+++ b/templates/create.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="content">
   <center>
-    <h3>Matching with Vikings</h3>
+    <h3><font color="#013F5C">Matching with Vikings</h3>
     <div class="text">
       <strong><p>Create Your Own Survey!</p></strong>
     </div>
