edited formatting for signup

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,11 +22,13 @@
 </div>
 
 </div>
-  <div id="input">
+  <div id="input" align="center">
     <form action="" method="POST">
       <input type="text" name="Username" class="" placeholder="Choose a username"></input>
-      <input type="password" name="Password" class="" placeholder="Choose a password" ></input>
-      <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
+<br>      
+<input type="password" name="Password" class="" placeholder="Choose a password" ></input>
+<br>    
+  <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
     </form>
   </div>
