--- a/templates/create.html
+++ b/templates/create.html
@@ -7,10 +7,31 @@
 {% block body %}
 <div class="content">
   <center>
-    <h3><font color="#013F5C">Matching with Vikings</h3>
+    <h3>Matching with Vikings</h3>
     <div class="text">
       <strong><p>Create Your Own Survey!</p></strong>
     </div>
   </center>
 </div>
+<form id="formcreate" action="" method="POST">
+      <input type="text" name="surveyname" class="" placeholder="Name Your Survey"></input>
+      <p>1. <input type="text" name="q1" placeholder="Question 1" >
+      <input type="radio" name="q1type" value="number" checked="checked">number</input>
+      <input type="radio" name="q1type" value="word">word</input>
+      <p>2. <input type="text" name="q2" placeholder="Question 2" >
+      <input type="radio" name="q2type" value="number" checked="checked">number</input>
+      <input type="radio" name="q2type" value="word">word</input>
+      <p>3. <input type="text" name="q3" placeholder="Question 3" >
+      <input type="radio" name="q3type" value="number" checked="checked">number</input>
+      <input type="radio" name="q3type" value="word">word</input>
+      <p>4. <input type="text" name="q4" placeholder="Question 4" >
+      <input type="radio" name="q4type" value="number" checked="checked">number</input>
+      <input type="radio" name="q4type" value="word">word</input>
+      <p>5. <input type="text" name="q5" placeholder="Question 5" >
+      <input type="radio" name="q5type" value="number" checked="checked">number</input>
+      <input type="radio" name="q5type" value="word">word</input>      
+      <input class="button" type="submit" name="submitcreate" value="Create" class=""></input>
+</form>
+
+<script src="/static/js/survey.js"></script>
 {% endblock %}
