changed the font size

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,7 @@
 <h3>Please enter your username and password below:</h2></center><br>
   <div id="input" align = "center">
     <form action="" method="POST">
+     <font size="4">
       Username: <input type="text" name="Username" class="" placeholder="Type your username"></input>
 <br>
       Password: <input type="password" name="Password" class="" placeholder="Type your password" ></input>
