--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,9 +27,19 @@
       <input type="text" name="Username" class="" placeholder="Choose a username"></input>
 <br>      
 <input type="password" name="Password" class="" placeholder="Choose a password" ></input>
-<br>    
+<br>
+<input type="text" name="Age" class="" placeholder=""></input>
+<br>
+<input type="text" name="RealName" class="" placeholder="Input your full name"></input>
+<br>
+<input type="radio" name="Gender" class="" value = "Male"></input>
+<input type="radio" name="Gender" class="" value = "Female"></input>
+<br>
+<input type="text" name="Hobbies" class="" placeholder = "Input your hobbies"></input>
+<br>
   <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
     </form>
   </div>
 {% endblock %}
+
