signup more fields

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,12 +28,12 @@
 <br>      
 <input type="password" name="Password" class="" placeholder="Choose a password" ></input>
 <br>
-<input type="text" name="Age" class="" placeholder=""></input>
+<input type="text" name="Age" class="" placeholder="Enter your age"></input>
 <br>
 <input type="text" name="RealName" class="" placeholder="Input your full name"></input>
 <br>
-<input type="radio" name="Gender" class="" value = "Male"></input>
-<input type="radio" name="Gender" class="" value = "Female"></input>
+<input type="radio" name="Gender" class="" value = "Male">Male</input>
+<input type="radio" name="Gender" class="" value = "Female">Female</input>
 <br>
 <input type="text" name="Hobbies" class="" placeholder = "Input your hobbies"></input>
 <br>
