--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,11 @@
   <div id="input" align = "center">
     <form action="" method="POST">
      <font size="4">
-      Username: <input type="text" name="Username" class="" placeholder="Type your username"></input>
-<br>
-      Password: <input type="password" name="Password" class="" placeholder="Type your password" ></input>
+      Username: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Username" class="" placeholder="Type your username"></input>
 <br><br>
-      <input class="button" type="submit" name="submitlogin" value="      Login      " class=""></input>
+      Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="" placeholder="Type your password" ></input>
+<br><br>
+      <input class="button" type="submit" name="submitlogin" value="        Login        " class=""></input>
       <br><br>
     </form>
   </div>
