--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,19 +24,22 @@
 </div>
   <div id="input" align="center">
     <form action="" method="POST">
-      <input type="text" name="Username" class="" placeholder="Choose a username"></input>
-<br>      
-<input type="password" name="Password" class="" placeholder="Choose a password" ></input>
+  <font size="4">
 <br>
-<input type="text" name="Age" class="" placeholder="Enter your age"></input>
+     Username: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Username" class="" placeholder="Choose a username"></input>
+<br><br>    
+Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="" placeholder="Choose a password" ></input>
+<br><br>
+Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Age" class="" placeholder="Enter your age"></input>
+<br><br>
+Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="" placeholder="Input your full name"></input>
+<br><br>
+<input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="" value = "Male">Male</input>
 <br>
-<input type="text" name="RealName" class="" placeholder="Input your full name"></input>
-<br>
-<input type="radio" name="Gender" class="" value = "Male">Male</input>
 <input type="radio" name="Gender" class="" value = "Female">Female</input>
-<br>
-<input type="text" name="Hobbies" class="" placeholder = "Input your hobbies"></input>
-<br>
+<br><br>
+Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Hobbies" class="" placeholder = "Input your favorite hobby"></input>
+<br><br>
   <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
     </form>
