Commented out some stuff in util because Dina didn't finish it, creates the url branch for different profiles, but still need to set up the Ajax call for it

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,15 @@
     </div>
   </center>
 </div>
+
+{% if user %}
+<h2>Looking at the profile of...</h2>
+<div id="anyUser">
+{{user}}
+</div>
+{% endif %}
+
+<h2>Logged in as...</h2>
 <div id="userInfo">
 </div>
 <script src="/static/js/profile.js"></script>
