adjusted the title "Matching with vikings" so that it only comes ABOVE the tabs

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <title>{% block title %}Title{% endblock %}</title>
+  <title>Matching with Vikings</title>
   {% block head %}
  <style type="text/css">@import "{{url_for("static", filename="css/main.css")}}";</style>
   <script src="/static/js/jquery.js"></script>
   {% endblock %}
   </head>
 {% block tabs %}
+<br><br><div align ="center"><font face ="arial" size="10" color="#013F5C"><b> MATCHING WITH VIKINGS</font></div></b>
   <div id="tabs">
     <ul id="tabnav">
       <form action="" method="POST">
