--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
    <font color="#013F5C">
 
   <br>
-  <center>    <h3>Matching with Vikings</h3>
+  <center>    
 <h3>Please enter your username and password below:</h2></center><br>
   <div id="input" align = "center">
     <form action="" method="POST">
