--- a/templates/results.html
+++ b/templates/results.html
@@ -9,9 +9,9 @@
   <font color="#013F5C">
   <center>
     <div class="text">
-      <strong><p>Welcome to the matching site.</p></strong>
+      <br><h2>Choose a survey to see its results.</h2></br>
     </div>
-  </center>
+
 
 <form action="" method="POST">
 <select name ="survey_selection" id = "names">
