--- a/templates/survey.html
+++ b/templates/survey.html
@@ -7,6 +7,8 @@
 {% block body %}
 <form action="" method="POST">
 <font color="#013F5C">
+<center><br>
+<h2>Choose a survey to take!</h2><br>
 <select name ="survey_selection" id = "names">
 {% for survey in surveynames%}
 <option><font color="#013F5C">
