--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,7 +10,7 @@
 
   <center>
     <div class="text">
-      <br><h2><u>Make an account!</u></h2><br><strong>Please fill out the information below:</strong>
+      <br><h2>Make an account!</h2><br><strong>Please fill out the information below:</strong>
     </div>
   </center>
 
