added this white background thing

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,16 @@ Results</button></li>
 </font>
 {% endblock %}
 <body>
+
+<TABLE BORDER="0" cellpadding="0" CELLSPACING="0">
+<TR>
+
+<TD WIDTH="1000" HEIGHT="500" BACKGROUND="static/backgrnd-grad-white.jpg" VALIGN="center">
+
 {% block body %}
 {% endblock %}
+</TD>
+</TR>
+</Table>
 </body>
 </html>
