--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,9 +20,13 @@
 <div id="anyUser">
 {{user}}
 </div>
+<div id="ytapiplayer1">
+</div>
 {% endif %}
 
 <br><b><font size="4">Logged in as:</font></b><div id="userInfo">
+</div>
+<div id="ytapiplayer2">
 </div>
 <script src="/static/js/profile.js"></script>
 {% endblock %}
