--- a/templates/signup.html
+++ b/templates/signup.html
@@ -33,7 +33,7 @@ Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="
 <br><br>
 Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="" placeholder="Input your full name"></input>
 <br><br>
-<input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="" value = "Male">Male</input>
+Gender: <input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="" value = "Male">Male</input>
 <br>
 <input type="radio" name="Gender" class="" value = "Female">Female</input>
 <br><br>
@@ -41,6 +41,9 @@ Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em
 <br><br>
   <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
+URL of favorite youtube video: <input type="text" size="25"
+  style="height:2em;line-height:1.5em;" name="Youtube" class=""
+  placeholder = "Input the URL of your favorite youtube video"></input>
     </form>
   </div>
 {% endblock %}
