--- a/templates/signup.html
+++ b/templates/signup.html
@@ -34,16 +34,19 @@ Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="
 Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="" placeholder="Input your full name"></input>
 <br><br>
 Gender: <input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="" value = "Male">Male</input>
-<br>
-<input type="radio" name="Gender" class="" value = "Female">Female</input>
+
+<input type="radio" name="Gender" class="" value = "Female">Female  </input>
 <br><br>
 Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Hobbies" class="" placeholder = "Input your favorite hobby"></input>
 <br><br>
-  <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
-      <br><br>
-URL of favorite youtube video: <input type="text" size="25"
+
+<!-- URL of favorite youtube video: <input type="text" size="25"
   style="height:2em;line-height:1.5em;" name="Youtube" class=""
-  placeholder = "Input the URL of your favorite youtube video"></input>
+  placeholder = "Input the URL of your favorite youtube
+  video"></input>  -->
+    
+      <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
+      <br><br>
     </form>
   </div>
 {% endblock %}
