survey submit working

--- a/templates/create.html
+++ b/templates/create.html
@@ -38,5 +38,5 @@ Write questions for your survey below, and indicate whether the answer should be
 </div>
 </form>
 
-<script src="/static/js/survey.js"></script>
+<script src="/static/js/create.js"></script>
 {% endblock %}
