--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,4 +29,6 @@
 <div id="ytapiplayer2">
 </div>
 <script src="/static/js/profile.js"></script>
+<script type="text/javascript" src="/static/js/swfobject.js"
+id="trailer"></script>
 {% endblock %}
