--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
   <title>Matching with Vikings</title>
   {% block head %}
  <style type="text/css">@import "{{url_for("static", filename="css/main.css")}}";</style>
+<style type="text/css">@import "{{url_for("static", filename="css/forms.css")}}\
+";</style>
   <script src="/static/js/jquery.js"></script>
   {% endblock %}
   </head>
