working on html

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,12 @@
 <head>
   <title>Matching with Vikings</title>
   {% block head %}
- <style type="text/css">@import "{{url_for("static", filename="css/main.css")}}";</style>
-<style type="text/css">@import "{{url_for("static", filename="css/forms.css")}}\
-";</style>
+
+<style type="text/css">@import "{{url_for("static", filename="css/main.css")}}"</style>
+<style type="text/css">@import "{{url_for("static", filename="css/forms.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/buttons.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/workless.css")}}</style>
+
   <script src="/static/js/jquery.js"></script>
   {% endblock %}
   </head>
