changed base and signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 <style type="text/css">@import "{{url_for("static", filename="css/forms.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/buttons.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/workless.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/scaffolding.css")}}</style>
 
   <script src="/static/js/jquery.js"></script>
   {% endblock %}
@@ -52,6 +53,6 @@ Results</button></li>
 
 {% block body %}
 {% endblock %}
-S
+
 </body>
 </html>
