--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,23 +22,25 @@
 </div>
 
 </div>
-  <div id="input" align="center">
+  <div id="input" class="one_half" >
     <form action="" method="POST">
   <font size="4">
 <br>
-     Username: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Username" class="" placeholder="Choose a username"></input>
+     Username: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Username" class="button magenta" placeholder="Choose a username"></input>
 <br><br>    
-Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="" placeholder="Choose a password" ></input>
+Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="button magenta" placeholder="Choose a password" ></input>
 <br><br>
-Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Age" class="" placeholder="Enter your age"></input>
+Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Age" class="button magenta" placeholder="Enter your age"></input>
 <br><br>
-Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="" placeholder="Input your full name"></input>
+</div>
+<div id="input" class="one_half last">
+Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="button magenta" placeholder="Input your full name"></input>
 <br><br>
-Gender: <input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="" value = "Male">Male</input>
+Gender: <input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="button magenta" value = "Male">Male</input>
 
 <input type="radio" name="Gender" class="" value = "Female">Female  </input>
 <br><br>
-Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Hobbies" class="" placeholder = "Input your favorite hobby"></input>
+Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Hobbies" class="button magenta" placeholder = "Input your favorite hobby"></input>
 <br><br>
 
 <!-- URL of favorite youtube video: <input type="text" size="25"
@@ -46,7 +48,7 @@ Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em
   placeholder = "Input the URL of your favorite youtube
   video"></input>  -->
     
-      <input class="button" type="submit" name="submitsignup" value="Signup" class=""></input>
+      <input class="button red rounded large" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
     </form>
   </div>
