--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,7 +22,7 @@
 </div>
 
 </div>
-  <div id="input" class="one_half" >
+  <div id="input" class="one_half" align="center" >
     <form action="" method="POST">
   <font size="4">
 <br>
@@ -33,7 +33,7 @@ Password: <input type="password" size="25" style="height:2em;line-height:1.5em;"
 Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Age" class="button magenta" placeholder="Enter your age"></input>
 <br><br>
 </div>
-<div id="input" class="one_half last">
+<div id="input" class="one_half last" align="center">
 Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="button magenta" placeholder="Input your full name"></input>
 <br><br>
 Gender: <input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="button magenta" value = "Male">Male</input>
@@ -47,7 +47,9 @@ Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em
   style="height:2em;line-height:1.5em;" name="Youtube" class=""
   placeholder = "Input the URL of your favorite youtube
   video"></input>  -->
-    
+    </div>
+
+  <div id="input" class="one_full" align="center" >
       <input class="button red rounded large" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
     </form>
