edited the signup layout/magenta shading of login

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,9 +14,9 @@
   <div id="input" align = "center">
     <form action="" method="POST">
      <font size="4">
-      Username: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Username" class="button yellow" placeholder="Type your username"></input>
+      Username: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Username" class="button magenta" placeholder="Type your username"></input>
 <br><br>
-      Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="button yellow" placeholder="Type your password" ></input>
+      Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="button magenta" placeholder="Type your password" ></input>
 <br><br>
       <input class="button red rounded" type="submit" name="submitlogin" value="        Login        "></input>
       <br><br>
