--- a/templates/signup.html
+++ b/templates/signup.html
@@ -49,7 +49,7 @@ Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em
   video"></input>  -->
     </div>
 
-  <div id="input" class="one_full" align="center" >
+  <div id="input" align="center" >
       <input class="button red rounded large" type="submit" name="submitsignup" value="Signup" class=""></input>
       <br><br>
     </form>
