--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,15 @@
 <style type="text/css">@import "{{url_for("static", filename="css/buttons.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/workless.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/scaffolding.css")}}</style>
-
+<style type="text/css">@import "{{url_for("static", filename="css/typography.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/helpers.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/icons.css")}}</style>
   <script src="/static/js/jquery.js"></script>
   {% endblock %}
   </head>
 {% block tabs %}
-<br><br><div id="pageTitle" align ="center"><font face ="arial" size="6" color="#FFFFFF" style="BACKGROUND-COLOR:#013F5C;"><b>|-|-| MATCHING WITH VIKINGS |-|-| </font></div></b>
+
+<div align="center"><h1>Matching with Vikings</h1></div>
   <div id="tabs">
     <ul id="tabnav">
       <form action="" method="POST">
