--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 <br><br>
       Password: <input type="password" size="25" style="height:2em;line-height:1.5em;" name="Password" class="button magenta" placeholder="Type your password" ></input>
 <br><br>
-      <input class="button red rounded" type="submit" name="submitlogin" value="        Login        "></input>
+      <input class="button red rounded large" type="submit" name="submitlogin" value="        Login        "></input>
       <br><br>
     </form>
   </div>
