added more files

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,14 @@
 <style type="text/css">@import "{{url_for("static", filename="css/scaffolding.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/typography.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/helpers.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/application.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/breadcrumbs.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/tabs.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/tables.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/font.css")}}</style>
 <style type="text/css">@import "{{url_for("static", filename="css/icons.css")}}</style>
+<style type="text/css">@import "{{url_for("static", filename="css/pagination.css")}}</style>
+
   <script src="/static/js/jquery.js"></script>
   {% endblock %}
   </head>
