made results drop down pretty

--- a/templates/results.html
+++ b/templates/results.html
@@ -14,7 +14,7 @@
 
 
 <form action="" method="POST">
-<select name ="survey_selection" id = "names">
+<select class="button blue" name ="survey_selection" id = "names">
 {% for survey in surveynames%}
 <option> {{survey}} </option>
 {% endfor %}
