Still want to figure out why the percentages you get back from the results are so weird. Why was the lower percentage listed as the best result, shouldn't it be higher? That's why I commented that last part out. The format increased a lot, but we have a ways to go still and maybe we can work on commenting the code and making it prettier too...

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -9,7 +9,7 @@
 <font color="#013F5C">
 <center><br>
 <h2>Choose a survey to take!</h2><br>
-<select name ="survey_selection" id = "names">
+<select class="button blue" name ="survey_selection" id = "names">
 {% for survey in surveynames%}
 <option><font color="#013F5C">
 {{survey}}</font> </option>
