Made the sign in buttons look a lot prettier

--- a/templates/create.html
+++ b/templates/create.html
@@ -32,7 +32,7 @@ Write questions for your survey below, and indicate whether the answer should be
       <input type="radio" name="q5type" value="number" checked="checked">number</input>
       <input type="radio" name="q5type" value="word">word</input> 
 <br><br>     
-      <input type="submit" name="submitcreate" value="        Create        " class="button red rounded large"></input>
+      <button type="submit" name="submitcreate" value="        Create        " class="button red rounded large">Create</button>
 </div>
 </form>
 
